fix: #1984 wrapping titles and paragraphs

--- a/mw-webapp/src/component/editableTextarea/editableTextarea.module.scss
+++ b/mw-webapp/src/component/editableTextarea/editableTextarea.module.scss
@@ -7,8 +7,8 @@ $editableTextarea-width: 100%;
   width: $editableTextarea-width;
   flex-grow: 1;
   justify-content: space-between;
-  overflow-wrap: break-word;
   white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .editableTextareaActive {
